[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Star.png" type="Texture" id=1]
[ext_resource path="res://Assets/misc/Maple Tree_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Circle_blurred.png" type="Texture" id=3]
[ext_resource path="res://Location_Astral_Dungeon/scripts7/Enemy_Totem.gd" type="Script" id=5]
[ext_resource path="res://Location_Astral_Dungeon/scripts7/Player_Hurtbox.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=11]
radius = 281.016

[sub_resource type="Animation" id=3]
resource_name = "Attack"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Particles2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Spawn"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0993789, 0.832298, 1 )
colors = PoolColorArray( 0.886275, 0.403922, 0.756863, 0, 0.820313, 0.092926, 0.68961, 1, 0.867188, 0.823521, 0.35907, 1, 1, 0.968627, 0.631373, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 200, 0 )
initial_velocity = 189.9
initial_velocity_random = 0.3
angular_velocity = 3.09
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 3.01
scale_random = 0.5
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=8]
resource_name = "Scaling"
length = 10000.0
tracks/0/type = "value"
tracks/0/path = NodePath("ShootAnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2600 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpawnAnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2597.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 10.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Death"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001

[node name="Enemy_Totem" type="Node2D"]
script = ExtResource( 5 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ShootAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Attack"
playback_speed = 0.1
anims/Attack = SubResource( 3 )

[node name="SpawnAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
playback_speed = 0.1
anims/Spawn = SubResource( 7 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -8, -54 )
emitting = false
one_shot = true
explosiveness = 0.57
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="ScalingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Scaling"
anims/Scaling = SubResource( 8 )

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="HP" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
visible = false
margin_top = -110.0
margin_right = 40.0
margin_bottom = -96.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyCount" type="Label" parent="."]
visible = false
margin_left = -42.0
margin_right = -2.0
margin_bottom = 14.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell_Timer" type="Timer" parent="."]

[node name="DieTimer" type="Timer" parent="."]

[node name="SpawnEnemyTimer" type="Timer" parent="."]

[node name="Puzzle" type="Position2D" parent="."]

[node name="DamageArea" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="area_entered" from="Hurtbox" to="." method="enemyContact"]
[connection signal="timeout" from="Spell_Timer" to="." method="_on_Spell_Timer_timeout"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_SpawnEnemyTimer_timeout"]
